--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.6",
+    "webpack-merge": "^4.2.1",
     "webpack-node-externals": "^1.7.2"
   }
 }
